--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,17 @@
 </div>
   <br>
 <div class="content">
+  <div class="textbox">
+    <h1>OLÁ, MEU NOME É JOÃO VICTOR</h1>
+    <h2>sou desenvolvedor front-end</h2>
+    <h3>e esta é minha pagina pessoal</h3>
+  </div>
+  <div class="texttwo">
+    <div class="photo">
+    </div>
+  </div>
 </div>
   <br>
 <div class="lbar">
   <app-bottom-bar></app-bottom-bar>
 </div>
-
-<router-outlet></router-outlet>
