--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -7,9 +7,9 @@
     </select>
   </div>
   <div class="page-menu">
-    <app-button-page label="HOME"></app-button-page>
-    <app-button-page label="ABOUT ME"></app-button-page>
-    <app-button-page label="ACADEMIC"></app-button-page>
-    <app-button-page label="PROJECTS"></app-button-page>
+    <app-button-page link="/home" label="HOME"></app-button-page>
+    <app-button-page link="/about-me" label="ABOUT ME"></app-button-page>
+    <app-button-page link="/academic" label="ACADEMIC"></app-button-page>
+    <app-button-page link="/projects" label="PROJECTS"></app-button-page>
   </div>
 </div>
