--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,17 @@
-<p>projects works!</p>
+<div class="tbar">
+  <app-top-bar></app-top-bar>
+</div>
+  <br>
+<div class="content">
+  <div class="textbox">
+    <h1>PROJETOS</h1>
+  </div>
+  <div class="texttwo">
+    <div class="photo">
+    </div>
+  </div>
+</div>
+  <br>
+<div class="lbar">
+  <app-bottom-bar></app-bottom-bar>
+</div>
