--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
 .content {
   background-color: rgba(211, 211, 211, 1);
-  height: 820px;
+  height: 935px;
   border-radius: 15px;
   margin-left: 4px;
   margin-right: 4px;
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
+  align-items: center;
 }
 
 .textwo {
@@ -27,16 +28,14 @@
 }
 h1 {
   font-size: 100px;
-  margin-left: 50px;
   margin-bottom: -25px;
   font-family:'Bebas Neue', sans-serif;
   letter-spacing: 3px;
 }
 
 h2 {
-  font-size: 90px;
+  font-size: 100px;
   margin-top: 0.5px;
-  margin-left: 90px;
   margin-bottom: -25px;
   font-family: 'Bebas Neue', sans-serif;
   letter-spacing: 3px;
@@ -45,8 +44,7 @@ h2 {
 
 h3 {
   margin-top: 0.5px;
-  margin-left: 130px;
-  font-size: 80px;
+  font-size: 100px;
   font-family: 'Bebas Neue', sans-serif;
   letter-spacing: 3px;
 }
