--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
 <div class="content">
   <div class="textbox">
     <h1>OLÁ, MEU NOME É JOÃO VICTOR</h1>
-    <h2>sou desenvolvedor front-end</h2>
+    <h2>sou desenvolvedor</h2>
     <h3>e esta é minha pagina pessoal</h3>
   </div>
   <div class="texttwo">
