--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -3,7 +3,9 @@
 </div>
   <br>
 <div class="content">
+  <div class="buttons">
   <button class="button-alternation" (click)="alternarConteudo()">Sobre mim</button>
+  </div>
   <div class="textbox" *ngIf="mostrarConteudoUm">
     <h1>salve 1</h1>
   </div>
