--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,6 +3,13 @@
 </div>
   <br>
 <div class="content">
+  <div class="buttons">
+    <button class="button-alternation">Angular</button>
+    <button class="button-alternation2">C/C++</button>
+    <button class="button-alternation3">Java</button>
+    <button class="button-alternation4">C#</button>
+    <button class="button-alternation5">Python</button>
+  </div>
   <div class="textbox">
     <h1>PROJETOS</h1>
   </div>
