--- a/src/app/pages/about-me/about-me.component.css
+++ b/src/app/pages/about-me/about-me.component.css
@@ -21,8 +21,8 @@
 .buttons {
   width: 100%;
   height: 50px;
-  background-color: rgba(217, 103, 4, 1);
-  border-radius: 15px;
+  background-color: transparent;
+  border-bottom: 2px solid white;
 }
 .button-alternation {
   position: absolute;
@@ -34,6 +34,7 @@
   background-color: transparent;
   text-align: center;
   font-size: 15px;
+  border-right: 2px solid white;
 }
 
 .button-alternation:hover {
