--- a/src/app/pages/academic/academic.component.html
+++ b/src/app/pages/academic/academic.component.html
@@ -3,10 +3,15 @@
 </div>
   <br>
 <div class="content">
-  <div class="textbox">
+  <div class="buttons">
+    <button class="button-alternation">Universidade</button>
+    <button class="button-alternation2">Cursos</button>
+  </div>
+  <div class="university">
     <h1>ACADEMIC</h1>
   </div>
-  <div class="texttwo">
+  <div class="courses">
+    <h1>batata</h1>
   </div>
 </div>
   <br>
