--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -15,108 +15,29 @@
   border-bottom: 2px solid white;
 }
 
-.button-alternation {
-  position: absolute;
-  height: 50px;
-  width: 100px;
-  border: none;
-  outline: none;
-  color: rgba(217, 103, 4, 1);
-  background-color: transparent;
-  text-align: center;
-  font-size: 15px;
-  border-right: 2px solid white;
-}
-
-.button-alternation2 {
-  position: absolute;
-  height: 50px;
-  width: 100px;
-  margin-left: 100px;
-  border: none;
-  outline: none;
-  color: rgba(217, 103, 4, 1);
-  background-color: transparent;
-  text-align: center;
-  font-size: 15px;
-  border-right: 2px solid white;
-}
-
-.button-alternation3 {
-  position: absolute;
-  height: 50px;
-  width: 100px;
-  margin-left: 200px;
-  border: none;
-  outline: none;
-  color: rgba(217, 103, 4, 1);
-  background-color: transparent;
-  text-align: center;
-  font-size: 15px;
-  border-right: 2px solid white;
-}
-
-.button-alternation4 {
-  position: absolute;
-  height: 50px;
-  width: 100px;
-  margin-left: 300px;
-  border: none;
-  outline: none;
-  color: rgba(217, 103, 4, 1);
-  background-color: transparent;
-  text-align: center;
-  font-size: 15px;
-  border-right: 2px solid white;
-}
-
-.button-alternation5 {
-  position: absolute;
-  height: 50px;
-  width: 100px;
-  margin-left: 400px;
-  border: none;
-  outline: none;
-  color: rgba(217, 103, 4, 1);
-  background-color: transparent;
-  text-align: center;
-  font-size: 15px;
-  border-right: 2px solid white;
-}
-
-.textbox {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-}
-
-.textwo {
-  display: flex;
-}
-
 h1 {
   font-size: 100px;
   margin-left: 50px;
   margin-bottom: -25px;
   font-family:'Bebas Neue', sans-serif;
   letter-spacing: 3px;
+  color: white;
+  margin: 0px;
 }
 
-h2 {
-  font-size: 90px;
-  margin-top: 0.5px;
-  margin-left: 90px;
-  margin-bottom: -25px;
-  font-family: 'Bebas Neue', sans-serif;
-  letter-spacing: 3px;
-  color: rgba(195, 1, 46, 1);
+.languageContent {
+ width: 100%;
+ height: 100%; 
 }
 
-h3 {
-  margin-top: 0.5px;
-  margin-left: 130px;
-  font-size: 80px;
-  font-family: 'Bebas Neue', sans-serif;
-  letter-spacing: 3px;
+.LanguageBox {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding-top: 20px;
+  padding-left: 20px;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
-
