--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -7,10 +7,10 @@
   <button class="button-alternation" (click)="alternarConteudo()">Sobre mim</button>
   </div>
   <div class="textbox" *ngIf="mostrarConteudoUm">
-    <h1>salve 1</h1>
+    <h1>conteudo 1</h1>
   </div>
   <div class="texttwo" *ngIf="!mostrarConteudoUm">
-    <h1>salve 2</h1>
+    <h1>conteudo 2</h1>
   </div>
 </div>
   <br>
