--- a/src/app/pages/projects/Components/language-button/language-button.component.css
+++ b/src/app/pages/projects/Components/language-button/language-button.component.css
@@ -3,7 +3,7 @@ button {
   width: 100px;
   border: none;
   outline: none;
-  color: rgba(217, 103, 4, 1);
+  color: #FCFCFF;
   background-color: transparent;
   text-align: center;
   font-size: 15px;
