--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,5 @@
 .content {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #5E0C12;
   height: 935px;
   border-radius: 15px;
   margin-left: 4px;
@@ -31,7 +31,7 @@ h1 {
   margin-bottom: -25px;
   font-family:'Bebas Neue', sans-serif;
   letter-spacing: 3px;
-  color: rgba(217, 103, 4, 1);
+  color:#FCFCFF;
 }
 
 h2 {
@@ -40,7 +40,7 @@ h2 {
   margin-bottom: -25px;
   font-family: 'Bebas Neue', sans-serif;
   letter-spacing: 3px;
-  color: rgba(3, 120, 166, 1);
+  color: #FFB20F;
 }
 
 h3 {
@@ -48,6 +48,6 @@ h3 {
   font-size: 100px;
   font-family: 'Bebas Neue', sans-serif;
   letter-spacing: 3px;
-  color: rgba(217, 103, 4, 1);
+  color: #FCFCFF;
 }
 
