--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -1,5 +1,5 @@
 .content {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #5E0C12;
   height: 935px;
   border-radius: 15px;
   margin-left: 4px;
